--- a/client/insubuyApp/src/app/components/display-plans/display-plans.component.html
+++ b/client/insubuyApp/src/app/components/display-plans/display-plans.component.html
@@ -20,5 +20,17 @@
             <li>Section: {{plan.section}} </li>
             <li>Best Sellers: {{plan.bestSellers}} </li>
         </ul>
+        <div class="compare">
+          <input type="checkbox" name="compare" value="Bike" (change)="selectQuotesToCompare($event, plan, plan.id)" /> Compare
+        </div>
+    </div>
+    <p class="danger" *ngIf="minPlansToCompare">Please select atleast 2 plans to Compare</p>
+    <p class="danger" *ngIf="maxPlansToCompare">Only 4 plans can be compared at a time</p>
+
+
+    <div class="submit">
+      <button class="compareBtn" (click)="comparePlans()">
+          Compare Selected Plans
+      </button>
     </div>
 </div>
