--- a/client/insubuyApp/src/app/components/quote-form/quote-form.component.html
+++ b/client/insubuyApp/src/app/components/quote-form/quote-form.component.html
@@ -19,18 +19,18 @@
          <div class="form-group">
                 <label for="age" autofocus>Age/Year</label>
                 <div>
-                    <input type="text" formControlName="age" name="age" id="age"  maxlength="4" placeholder="Provide your Age or Birth Year"/> 
+                    <input type="number" formControlName="age" name="age" id="age"  maxlength="4" placeholder="Provide your Age or Birth Year" [(ngModel)]="age" /> 
                 </div>
                 <ul class="danger" *ngIf="quotesForm.get('age').errors && (quotesForm.get('age').touched || quotesForm.get('age').dirty)" role="alert">
                         <span>Please provide you Age or Birth Year </span>
-                    </ul>
+                </ul>
         </div>
         
         <div class="form-group">
                 <label for="travelDates" autofocus>Travel Dates (mm/dd/yyyy)</label>
                 <div>
-                    <input type="text" formControlName="startDate" name="startDate" id="startDate" placeholder="Start Date"/> 
-                    <input type="text" formControlName="endDate" name="endDate" id="endDate" placeholder="End Date"/>
+                    <input type="date" formControlName="startDate" name="startDate" id="startDate" placeholder="Start Date"/> 
+                    <input type="date" formControlName="endDate" name="endDate" id="endDate" placeholder="End Date"/>
                 </div>
 
                 <ul class="danger" *ngIf="quotesForm.get('startDate').errors && (quotesForm.get('startDate').touched || quotesForm.get('startDate').dirty)" role="alert">
@@ -45,7 +45,7 @@
         <div class="form-group">
                 <label for="citizenship" autofocus>Citizenship</label>
                 <div>
-                    <input type="text" formControlName="citizenship" name="citizenship" id="citizenship"  placeholder="Provide your country of citizenship"/> 
+                    <input type="text" formControlName="citizenship" name="citizenship" id="citizenship"  placeholder="Provide your country of citizenship" [(ngModel)]="citizenship" /> 
                 </div>
 
                 <ul class="danger" *ngIf="quotesForm.get('citizenship').errors && (quotesForm.get('citizenship').touched || quotesForm.get('citizenship').dirty)" role="alert">
@@ -56,7 +56,7 @@
         <div class="form-group">
                 <label for="state" autofocus>State</label>
                 <div>
-                    <input type="text" formControlName="state" name="state" id="state"  placeholder="Choose State"/> 
+                    <input type="text" formControlName="state" name="state" id="state"  placeholder="Choose State" [(ngModel)]="state" /> 
                 </div>
 
                 <ul class="danger" *ngIf="quotesForm.get('state').errors && (quotesForm.get('state').touched || quotesForm.get('state').dirty)" role="alert">
@@ -67,6 +67,6 @@
     </form>
 
     <div class="submitQuotes">
-            <button type="submit" class="quotesBtn" [disabled]="quotesForm.invalid" (click)="getQuotes()">GET QUOTES </button>
+            <button type="submit" class="quotesBtn" (click)="getQuotes()">GET QUOTES </button>
         </div>
 </div>
