--- a/client/insubuyApp/src/app/components/quote-form/quote-form.component.css
+++ b/client/insubuyApp/src/app/components/quote-form/quote-form.component.css
@@ -1,19 +1,95 @@
-.quoteForm {
+.getQuote {
+    width: 80%;
+    align-content: center;
+    height: 100%;
+    border: 1px solid gray;
+}
 
+header {
+    margin-bottom: 2%;
+    background-color: whitesmoke;
+    height: 25%;
+}
+
+header > h2 {
+     text-align: center;
+     padding: 2%;
+     color: blue;
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .form-group {
+    margin: 4%;
+}
+
+label {
+    text-align: left;
+    font-size: 22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 1%;
+}
+
+.policySelect {
+    height: 40px;
+    width: 83%;
+    margin: 1%;
+    font-size: 20px;
 
 }
 
-.danger {
+input {
+    height: 40px;
+    width: 83%;
+    margin: 1%;
+}
 
+.dateDiv {
+    margin: 1%;
+}
+
+.dateInput {
+    width: 42%;
+    margin: 0;
+}
+ 
+.danger {
+    color:red;
+    margin-left: 2%;
+    margin-bottom: -3%;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+footer {
+    margin: 2%;
 }
 
 .submitQuotes {
-    
+    width: 100%;
 }
 
 .quotesBtn {
+   height: 50px;
+   width: 99%;
+   background-color: rgb(209, 115, 8);
+   color: white;
+   font-size: 20px;
+}
 
+.reset {
+    margin: 1%;
+    width: 100%;
+}
+
+.resetBtn {
+    height: 40px;
+    width: 20%;
+    margin-left: 42%;
+    color: blue;
+    font-size: 26px;
 }
