--- a/client/insubuyApp/src/app/components/quote-form/quote-form.component.html
+++ b/client/insubuyApp/src/app/components/quote-form/quote-form.component.html
@@ -75,9 +75,9 @@
                 </div>
 
                 <div class="reset">
-                        <a class="resetBtn" (click)="reset()">
+                        <button class="resetBtn" (click)="reset()">
                                 Reset Form
-                        </a>
+                        </button>
                 </div>
         </footer>
 </div>
