--- a/client/insubuyApp/src/app/components/quote-form/quote-form.component.css
+++ b/client/insubuyApp/src/app/components/quote-form/quote-form.component.css
@@ -13,9 +13,11 @@ header {
 
 header > h2 {
      text-align: center;
-     padding: 2%;
+     padding: 3%;
      color: blue;
-     font-family: Verdana, Geneva, Tahoma, sans-serif;
+     font-family: 'Courier New', Courier, monospace;
+     font-weight: bold;
+     font-size: 30px;
 }
 
 .wrapper {
@@ -30,7 +32,9 @@ header > h2 {
 label {
     text-align: left;
     font-size: 22px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(61, 60, 60); 
+    font-weight: bold;   
     margin: 1%;
 }
 
@@ -39,13 +43,22 @@ label {
     width: 83%;
     margin: 1%;
     font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(95, 90, 90);
+}
 
+.policySelect > option {
+    font-weight: bold;
 }
 
 input {
     height: 40px;
     width: 83%;
     margin: 1%;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    color: gray;
+    font-weight: bold;
 }
 
 .dateDiv {
@@ -62,7 +75,8 @@ input {
     margin-left: 2%;
     margin-bottom: -3%;
     font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
 }
 
 footer {
@@ -74,11 +88,13 @@ footer {
 }
 
 .quotesBtn {
-   height: 50px;
+   height: 60px;
    width: 99%;
    background-color: rgb(209, 115, 8);
    color: white;
-   font-size: 20px;
+   font-size: 26px;
+   font-family: 'Courier New', Courier, monospace;
+   font-weight: bold;
 }
 
 .reset {
@@ -87,9 +103,13 @@ footer {
 }
 
 .resetBtn {
-    height: 40px;
+    height: 38px;
     width: 20%;
-    margin-left: 42%;
-    color: blue;
+    margin-left: 40%;
+    color: rgb(24, 24, 185);
     font-size: 26px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    background-color: white;
+    border: none;
 }
