sortby compare modal styles added --finalApp

--- a/client/insubuyApp/src/app/app.component.html
+++ b/client/insubuyApp/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="wrapper">
+    <div class="header">
+        <h4>Insubuy Policy Quote Form</h4>           
+    </div>
+    <router-outlet></router-outlet>
+ </div>
