--- a/client/insubuyApp/src/app/components/quote-form/quote-form.component.html
+++ b/client/insubuyApp/src/app/components/quote-form/quote-form.component.html
@@ -1,7 +1,5 @@
-<div class="getQuote"> 
-        <header>
-                <h2>Insubuy Get Quote</h2>
-        </header>
+<div> 
+      
     <form [formGroup]="quotesForm" autocomplete="off" class="wrapper">
 
          <div class="form-group">
